--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "App to give creative sketching prompts.",
   "main": "index.js",
+  "repository": "git@github.com:billturner/creative-prompts.git",
   "scripts": {
-    "start": "node ./node_modules/.bin/webpack-dev-server.js"
+    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js"
   },
   "author": "Bill Turner",
   "license": "MIT",
