--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "author": "Bill Turner",
   "license": "MIT",
   "dependencies": {
+    "immutable": "^3.7.6",
+    "lodash": "^4.0.1",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-redux": "^4.0.6",
-    "redux": "^3.0.6"
+    "redux": "^3.0.6",
+    "redux-logger": "^2.4.0"
   },
   "devDependencies": {
     "babel-core": "^6.4.5",
