--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "repository": "git@github.com:billturner/creative-prompts.git",
   "scripts": {
-    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js"
+    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+    "lint": "node ./node_modules/eslint/bin/eslint.js ./src"
   },
   "author": "Bill Turner",
   "license": "MIT",
@@ -20,10 +21,13 @@
   },
   "devDependencies": {
     "babel-core": "^6.4.5",
+    "babel-eslint": "^5.0.0-beta6",
     "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-1": "^6.3.13",
+    "eslint": "^1.10.3",
+    "eslint-plugin-react": "^3.16.1",
     "webpack": "^1.12.12",
     "webpack-dev-server": "^1.14.1"
   }
