--- a/package.json
+++ b/package.json
@@ -6,17 +6,19 @@
   "repository": "git@github.com:billturner/creative-prompts.git",
   "scripts": {
     "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
-    "lint": "node ./node_modules/eslint/bin/eslint.js ./src"
+    "lint": "node ./node_modules/eslint/bin/eslint.js ./src",
+    "test": "mocha --compilers js:babel-register --require ./test/setup.js test/**/*.spec.js --recursive",
+    "test:watch": "npm test -- --watch"
   },
   "author": "Bill Turner",
   "license": "MIT",
   "dependencies": {
     "immutable": "^3.7.6",
     "lodash": "^4.0.1",
-    "react": "^0.14.6",
-    "react-dom": "^0.14.6",
-    "react-redux": "^4.0.6",
-    "redux": "^3.0.6",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "react-redux": "^4.1.1",
+    "redux": "^3.1.2",
     "redux-logger": "^2.4.0"
   },
   "devDependencies": {
@@ -26,8 +28,18 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-1": "^6.3.13",
+    "babel-register": "^6.4.3",
+    "chai": "^3.5.0",
+    "css-loader": "^0.23.1",
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.16.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "mocha": "^2.4.5",
+    "node-sass": "^3.4.2",
+    "react-addons-test-utils": "^0.14.7",
+    "sass-loader": "^3.1.2",
+    "sinon": "^1.17.3",
+    "style-loader": "^0.13.0",
     "webpack": "^1.12.12",
     "webpack-dev-server": "^1.14.1"
   }
