Production builds and other things
* now has a build task for production builds
* now builds to dist/ directory
* copies over index.html on build

--- a/.eslintrc
+++ b/.eslintrc
@@ -184,7 +184,9 @@
   "extends": "eslint:recommended",
   "env": {
     "es6": true,
-    "browser": true
+    "browser": true,
+    "amd": true,
+    "mocha": true
   },
   "plugins": [
     "react"
