--- a/.eslintrc
+++ b/.eslintrc
@@ -115,7 +115,7 @@
     "lines-around-comment": 0,
     "linebreak-style": [2, "unix"],
     "max-nested-callbacks": [2, 3],
-    "new-cap": 2,
+    "new-cap": [2, { "capIsNewExceptions": ["List", "Map"] }],
     "new-parens": 2,
     "newline-after-var": 0,
     "no-array-constructor": 2,
