--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
   "author": "Bill Turner",
   "license": "MIT",
   "dependencies": {
+    "bootstrap-sass": "^3.3.6",
+    "history": "^1.17.0",
     "immutable": "^3.7.6",
     "lodash": "^4.0.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-redux": "^4.2.0",
+    "react-router": "^2.0.0-rc6",
+    "react-router-redux": "^3.0.0",
     "redux": "^3.2.0",
     "redux-logger": "^2.4.0"
   },
