--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "repository": "git@github.com:billturner/creative-prompts.git",
   "scripts": {
+    "clean": "rimraf dist/*",
     "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "lint": "node ./node_modules/eslint/bin/eslint.js ./src ./test",
     "test": "mocha --compilers js:babel-register --require ./test/setup.js --recursive",
@@ -16,7 +17,6 @@
   "dependencies": {
     "bootstrap-sass": "^3.3.6",
     "history": "^1.17.0",
-    "immutable": "^3.7.6",
     "lodash": "^4.0.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
@@ -44,10 +44,18 @@
     "mocha": "^2.4.5",
     "node-sass": "^3.4.2",
     "react-addons-test-utils": "^0.14.7",
+    "rimraf": "^2.5.2",
     "sass-loader": "^3.1.2",
     "sinon": "^1.17.3",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.12",
     "webpack-dev-server": "^1.14.1"
+  },
+  "babel": {
+    "presets": [
+      "react",
+      "es2015",
+      "stage-1"
+    ]
   }
 }
