--- a/package.json
+++ b/package.json
@@ -16,47 +16,40 @@
   "license": "MIT",
   "dependencies": {
     "bootstrap-sass": "^3.3.6",
-    "history": "^1.17.0",
-    "lodash": "^4.0.1",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
-    "react-redux": "^4.2.0",
-    "react-router": "^2.0.0-rc6",
-    "react-router-redux": "^3.0.0",
-    "redux": "^3.2.0",
-    "redux-logger": "^2.4.0"
+    "history": "^2.1.0",
+    "lodash": "^4.11.1",
+    "react": "^15.0.1",
+    "react-bootstrap": "^0.29.0",
+    "react-dom": "^15.0.1",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.3.0",
+    "redux": "^3.5.1",
+    "redux-logger": "^2.6.1"
   },
   "devDependencies": {
-    "babel-core": "^6.4.5",
-    "babel-eslint": "^5.0.0-beta6",
-    "babel-loader": "^6.2.1",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "babel-preset-stage-1": "^6.3.13",
+    "babel-core": "^6.7.6",
+    "babel-eslint": "^6.0.3",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
-    "babel-register": "^6.4.3",
+    "babel-register": "^6.7.2",
+    "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
-    "enzyme": "^2.0.0",
-    "eslint": "^1.10.3",
-    "eslint-plugin-react": "^3.16.1",
-    "expect": "^1.14.0",
-    "expect-jsx": "^2.3.0",
+    "enzyme": "^2.2.0",
+    "eslint": "^2.8.0",
+    "eslint-plugin-react": "^5.0.1",
+    "expect": "^1.18.0",
+    "expect-jsx": "^2.5.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "mocha": "^2.4.5",
-    "node-sass": "^3.4.2",
-    "react-addons-test-utils": "^0.14.7",
+    "node-sass": "^3.5.1",
+    "react-addons-test-utils": "^15.0.1",
     "rimraf": "^2.5.2",
-    "sass-loader": "^3.1.2",
-    "style-loader": "^0.13.0",
-    "webpack": "^1.12.12",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
-  },
-  "babel": {
-    "presets": [
-      "react",
-      "es2015",
-      "stage-2"
-    ]
   }
 }
