--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "repository": "git@github.com:billturner/creative-prompts.git",
   "scripts": {
-    "clean": "rimraf dist/*",
+    "clean": "cross-env rimraf dist/*",
     "start:dev": "NODE_ENV=development node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "lint": "node ./node_modules/eslint/bin/eslint.js ./src ./test",
     "test": "./node_modules/.bin/mocha --compilers js:babel-register --recursive src/**/*.spec.js",
     "test:watch": "npm test -- --watch",
-    "build": "NODE_ENV=production ./node_modules/.bin/webpack -p --progress"
+    "build": "NODE_ENV=production ./node_modules/.bin/webpack -p --progress",
+    "reset": "cross-env rimraf node_modules/* && npm install"
   },
   "author": "Bill Turner",
   "license": "MIT",
@@ -19,8 +20,9 @@
     "history": "^2.1.0",
     "lodash": "^4.11.1",
     "react": "^15.0.1",
-    "react-bootstrap": "^0.29.0",
+    "react-bootstrap": "^0.29.3",
     "react-dom": "^15.0.1",
+    "react-helmet": "^3.1.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.3.0",
     "redux": "^3.5.1",
@@ -30,6 +32,7 @@
     "babel-core": "^6.7.6",
     "babel-eslint": "^6.0.3",
     "babel-loader": "^6.2.4",
+    "babel-plugin-lodash": "^3.0.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
